# Sunray

./: .clang-format  .gitignore  PRD.md  README.md  REFACTORING_TODO.md  TIMING_IMPROVEMENTS_PROPOSAL.md  TODO.md  TODO_Additional_Improvements.md  TODO_GPS_IMU_Improvements.md  TODO_IMU_Navigation.md  TODO_MAP.md  TODO_Motor_Optimization.md  TODO_Motor_Simplification.md  TODO_PID_Stanley_Controller.md
.trae/rules/: project_rules.md
alfred/: CMakeLists.txt  INSTALL.md  README_FLASH.md  STM32_FLASH_README.md  compile_stm32.sh  config.h  config_alfred.h  config_owl_fuxtec_ros.h  config_owlmower.h  config_sim.h  flash_config.conf  flash_stm32.sh  install_flash_tools.sh  service.sh  start_sunray.sh  stm32_manager.sh  test_flash.sh
alfred/config_files/openocd/: flash-original.ocd  flash-sunray-compat.ocd  save-firmware.ocd
alfred/config_files/sunray/: sunray.service
alfred/firmware/: rm18.ino
alfred/src/: stdlib_noniso.h  wiring_int.c  wiring_thread.c
alfred/src/utility/: wl_types.h
alfred/tests/: CMakeLists.txt  config_validator.cpp  config_validator.h  test_config_error_handling.cpp  test_config_structures.cpp  test_config_structures_simple.cpp  test_main.cpp  test_main_simple.cpp  test_serial_robot_driver.cpp
alfred/tests/mocks/: mock_serial.cpp  mock_serial.h  mock_stm32.cpp  mock_stm32.h
docs/: AT_Command_O4_Clear_Obstacles.md  Extended_StateMachine_Documentation.md  StateMachine_Analysis.md
python/: CMakeLists.txt
sunray/: GeometryUtils.cpp  GeometryUtils.h  LineTracker.cpp  MapConstants.h  MapIO.cpp  MapIO.h  PathFinder.cpp  PathFinder.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  PolygonList.cpp  PolygonList.h  PubSubClient.cpp  QuaternionMath.cpp  QuaternionMath.h  RingBuffer.cpp  SafeArray.cpp  SafeArray.h  StateEstimator.cpp  StateEstimator.h  Stats.cpp  Storage.cpp  TIMING_ANALYSIS.md  WiFi_Restart_Documentation.md  battery.cpp  comm.cpp  config_example.h  helper.cpp  helper.h  linuxcan.cpp  map.cpp  map.h  motor.cpp  motor.h  pid.cpp  pid.h  rcmodel.cpp  reset.cpp  (+6 more)
sunray - Kopie/: SimpleWifiRestart.cpp  SimpleWifiRestart.h  Storage.cpp  config_example.h
sunray - Kopie/src/driver/: SerialRobotDriver.cpp
sunray - Kopie/src/op/: Op.cpp
sunray/src/: memory_guard.cpp  memory_guard.h  memory_monitor.cpp  memory_monitor.h  stack_allocator.cpp  stack_allocator.h
sunray/src/config/: config_manager.h  config_migration.h  config_structures.h  config_validator.h
sunray/src/driver/: AmRobotDriver.cpp  CanRobotDriver.cpp  GpsAntennaOffset.cpp  GpsAntennaOffset.h  IcmDriver.cpp  SerialRobotDriver.cpp  SerialRobotDriver.h  SimpleWifiIntegration.cpp  SimpleWifiRestart.cpp  SimpleWifiRestart.h  SimpleWifiRestart_Configuration.md  SimpleWifiRestart_README.md  at_protocol_handler.h
sunray/src/icm/util/: ICM_20948_C.c
sunray/src/mpu/: inv_mpu.c
sunray/src/ntrip/: base64.cpp  ntripclient.h
sunray/src/op/: ChargeOp.cpp  DockOp.cpp  ErrorOp.cpp  EscapeForwardOp.cpp  EscapeReverseOp.cpp  GpsRebootRecoveryOp.cpp  GpsWaitFixOp.cpp  GpsWaitFloatOp.cpp  IdleOp.cpp  ImuCalibrationOp.cpp  KidnapWait.cpp  MowOp.cpp  Op.cpp  RelocalizationOp.cpp  op.h
sunray/src/skytraq/: SkyTraqNmeaParser.cpp
sunray/src/test/: PathFinderTest.cpp  Test.cpp  test.h
sunray/src/ublox/: ublox.cpp
